# Palimpsests

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  RELEASING.md  REUSE.toml  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml  sast.yml  scorecard.yml
benchmarks/: RUNBOOK.md  _workload.py  bench_shared_prefix.py  bench_shared_prefix_server.py  bench_tool_loop.py  bench_tool_loop_server.py  config.html  validate_primitives.py
docs/: ASSURANCE-CASE.md  BADGE-STATUS.md  BENCHMARKING.md  POSITIONING.md  ROADMAP.md  THREAT_MODEL.md  USAGE.md
docs/adr/: 0001-l3-inference-backend.md  0002-l3-in-process-and-test-boundary.md
docs/security/: AUDIT-2026-07.md
fuzz/: README.md  fuzz_state_blob.py
results/: REPRODUCE.md  env-primitives-igpu-01.md  env-primitives-igpu-02.md  env-primitives-igpu.md  env-transport-igpu-03.md  n4-shared-prefix-1p5b-igpu.md  n4-shared-prefix-7b-igpu.md  n5-tool-loop-1p5b-igpu.md  n5-tool-loop-7b-igpu.md  report-igpu-7b.md  report-igpu-vulkan.md  report.md
site/: index.html  llms.txt  robots.txt  site.webmanifest  sitemap.xml
src/palimpsests/: __init__.py  cli.py  core.py  py.typed  registry.py
src/palimpsests/audit/: __init__.py  key_manager.py  log.py
src/palimpsests/context/: __init__.py  block_memory.py  embeddings.py  tokens.py  window_manager.py
src/palimpsests/engine/: __init__.py  base.py  capabilities.py  messages.py  session.py
src/palimpsests/providers/: __init__.py  errors.py  llamacpp.py  native.py  ollama.py  process.py
src/palimpsests/providers/native/: __init__.py  backend.py  kvstore.py  llamacpp_backend.py  scheduler.py  session.py
tests/: conftest.py  test_audit.py  test_block_memory.py  test_cli.py  test_context_window.py  test_core.py  test_engine_contract.py  test_llama_process.py  test_llamacpp.py  test_native.py  test_native_argmax.py  test_native_batch.py  test_native_engine.py  test_native_kvstore.py  test_native_persistence.py  test_native_position.py  test_native_prefix.py  test_native_prefix_policy.py  test_native_scheduler.py  test_native_session.py  test_native_tool_loop.py  test_ollama.py  test_registry.py  test_smoke.py
