[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palimpsests"
version = "0.0.0"
description = "A layered local-LLM inference engine: from thin wrapper to your own serving service, under one abstraction."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Assault Consulting" }]
keywords = [
    "llm",
    "inference",
    "local-llm",
    "ollama",
    "llama-cpp",
    "kv-cache",
    "context-management",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base install is deliberately light: level 1 (Ollama over HTTP), the
# pure-Python context-memory layer, the audit/registry foundation, and
# the CLI. typer is here because the console script is a first-class
# part of the base package. No compiled dependency — the native pain
# lives behind extras.
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
# Audit key management via the OS keychain. Optional so the base package
# and CI don't depend on a Secret Service daemon being present; when
# absent, the caller passes an explicit key (tests do exactly this).
keyring = [
    "keyring>=25.0",
]
# At-rest audit-log encryption. sqlcipher3-wheels ships prebuilt binaries
# so it doesn't need a local SQLCipher/OpenSSL toolchain. Isolated behind
# an extra: without it the audit log falls back to plain sqlite3 (dev/CI),
# which is functional but not the production-encrypted path.
encryption = [
    "sqlcipher3-wheels>=0.5",
]
# Level 2. Pulls a native dependency — isolated behind an extra so the base
# install stays wheel-free. GPU builds (Metal/CUDA/Vulkan) are a runtime
# opt-in, not covered by CI.
llamacpp = [
    "llama-cpp-python>=0.2.90",
]
# Local embeddings for block-memory retrieval when not routing through the
# active engine's embedding endpoint.
embeddings = [
    "numpy>=1.26",
]
# Pinned ruff so local and CI agree on isort behavior exactly.
dev = [
    "pytest>=8.2",
    "pytest-httpx>=0.30",
    "ruff==0.15.20",
]

[project.urls]
Homepage = "https://github.com/Assault-Consulting/Palimpsests"
Repository = "https://github.com/Assault-Consulting/Palimpsests"
Issues = "https://github.com/Assault-Consulting/Palimpsests/issues"

[project.scripts]
palimpsests = "palimpsests.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/palimpsests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, B: bugbear, UP: pyupgrade.
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
# no-sections merges third-party and first-party imports into a single
# alphabetically-sorted block (after __future__ and stdlib). This makes
# import ordering INDEPENDENT of whether ruff classifies `palimpsests`
# as first-party (src heuristic, plain checkout) or third-party (when
# pip-installed via -e). That classification differs between a local
# machine and CI and was the sole cause of a CI-only I001 failure while
# every test job passed. With no-sections the grouping is deterministic
# in both environments.
no-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import mode importlib keeps src-layout test discovery clean without an
# editable install rewriting sys.path in surprising ways.
addopts = "--import-mode=importlib"
