[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palimpsests"
version = "0.5.1.dev0"
description = "A layered local-LLM inference engine: from thin wrapper to your own serving service, under one abstraction."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Assault Consulting" }]
keywords = [
    "llm",
    "inference",
    "local-llm",
    "ollama",
    "llama-cpp",
    "kv-cache",
    "context-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base install is deliberately light: level 1 (Ollama over HTTP), the
# pure-Python context-memory layer, the audit/registry foundation, and
# the CLI. typer is here because the console script is a first-class
# part of the base package. No compiled dependency — the native pain
# lives behind extras.
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
# Audit key management via the OS keychain. Optional so the base package
# and CI don't depend on a Secret Service daemon being present; when
# absent, the caller passes an explicit key (tests do exactly this).
keyring = [
    "keyring>=25.0",
]
# At-rest audit-log encryption. sqlcipher3-wheels ships prebuilt binaries
# so it doesn't need a local SQLCipher/OpenSSL toolchain. Isolated behind
# an extra — but NOT optional in effect: without it the audit log refuses
# to open rather than silently writing plaintext. A plaintext (still
# hash-chained) log is available only by explicit opt-in, via
# PALIMPSESTS_ALLOW_UNENCRYPTED_AUDIT=1 or allow_unencrypted=True, which
# is what CI does.
encryption = [
    "sqlcipher3-wheels>=0.5",
]
# Level 2 needs the `llama-server` binary from llama.cpp on PATH — the
# adapter spawns and manages it as a subprocess (it does NOT use the
# llama-cpp-python bindings). That binary is installed out-of-band
# (brew install llama.cpp, a release build, or a custom GPU build), not
# via pip, so this extra adds no Python packages: it exists only as a
# documented marker of the L2 requirement. httpx (already a base dep) is
# all the Python side needs.
#
# Exposure note: the managed llama-server listens on a local port with no
# --api-key. Single-user hosts only — see SECURITY.md, "Accepted risks".
llamacpp = []
# Level 3 (pal-native) runs an in-process decode loop over llama.cpp via
# its low-level Python bindings (ADR-0001/0002). llama-cpp-python pulls a
# native build (a C toolchain, or a prebuilt wheel), so it is isolated
# behind this extra and never installed in CI: the scheduler and engine
# are tested with a fake backend, and the real LlamaCppBackend is
# validated on hardware with a GGUF model.
native = [
    "llama-cpp-python>=0.3.0",
    # decode() wraps the C logits buffer as a numpy array and the sampler
    # argmaxes over it in C (bench Run 0.1 hot-path fix). numpy already
    # arrives transitively with llama-cpp-python; declared here so the
    # dependency is explicit rather than implied.
    "numpy>=1.26",
]
# Local vector math for block-memory retrieval (cosine over stored
# embeddings). numpy is the only requirement; the embed source itself is
# the active engine by default (no model dependency here).
embeddings = [
    "numpy>=1.26",
]
# Pinned ruff so local and CI agree on isort behavior exactly.
dev = [
    "pytest>=8.2",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff==0.15.21",
    # numpy is the [embeddings] extra in production; dev pulls it so the
    # BlockMemory retrieval path (cosine over stored vectors) runs in CI.
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/Assault-Consulting/Palimpsests"
Repository = "https://github.com/Assault-Consulting/Palimpsests"
Issues = "https://github.com/Assault-Consulting/Palimpsests/issues"

[project.scripts]
palimpsests = "palimpsests.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/palimpsests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, B: bugbear, UP: pyupgrade.
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
# no-sections merges third-party and first-party imports into a single
# alphabetically-sorted block (after __future__ and stdlib). This makes
# import ordering INDEPENDENT of whether ruff classifies `palimpsests`
# as first-party (src heuristic, plain checkout) or third-party (when
# pip-installed via -e). That classification differs between a local
# machine and CI and was the sole cause of a CI-only I001 failure while
# every test job passed. With no-sections the grouping is deterministic
# in both environments.
no-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import mode importlib keeps src-layout test discovery clean without an
# editable install rewriting sys.path in surprising ways.
addopts = "--import-mode=importlib"

[tool.coverage.run]
source = ["src/palimpsests"]
# Statement coverage (not branch) — this is what the OpenSSF Silver
# test_statement_coverage80 criterion asks for.

[tool.coverage.report]
show_missing = true
precision = 1
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
# Note: llamacpp_backend.py (the in-process ctypes backend) reads low
# because it can only run with the [native] extra and a real GGUF model
# on hardware, so CI cannot exercise it — it is validated on hardware per
# benchmarks/RUNBOOK.md. It is counted, not omitted: overall statement
# coverage clears the 80% gate with it included.
